--- a/untitled.ui
+++ b/untitled.ui
@@ -92,6 +92,13 @@
               </property>
              </widget>
             </item>
+            <item>
+             <widget class="QPushButton" name="ClearOption">
+              <property name="text">
+               <string>Clear options</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
           <item>
